staging/java-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: java-pod
spec:
  containers:
    - name: jdk11
      image: adoptopenjdk/openjdk11:alpine-jre
      command: ["sleep"]
      args: ["infinity"]
