staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-node
    app.kubernetes.io/instance: staging
  name: hello-node
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-node
status:
  loadBalancer: {}
